<AbsoluteLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayoutMetrocom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="1dp"
        android:layout_y="50dp" >
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="Usuario"
                android:textColor="@string/colorTxtEdit" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/txtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@string/fondoTxtEdit"
                android:text="ADMIN"
                android:textColor="@string/colorTextoTxtEdit" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:layout_weight="1"
                android:text="Contraseña"
                android:textColor="@string/colorTxtEdit" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@string/fondoTxtEdit"
                android:password="true"
                android:text="ADM2009"
                android:textColor="@string/colorTextoTxtEdit" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_x="0dp"
        android:layout_y="283dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/cmdOpciones"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="33dp"
            android:background="@string/colorFondoBoton"
            android:onClick="cmdOpciones_onclick"
            android:text="I N G R E S A R"
            android:textColor="@string/colorTextoBoton"
            android:textSize="10dp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="106dp"
            android:layout_height="24dp"
            android:layout_marginBottom="108dp"
            android:background="@android:color/darker_gray"
            android:onClick="onAddClick"
            android:text="Llamar WS"
            android:visibility="invisible" />
    </LinearLayout>

</AbsoluteLayout>
