<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@string/colorFondoPantallas"
    android:orientation="vertical" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp" />

    <Button
        android:id="@+id/cmdBuscarGPS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@string/colorFondoBoton"
        android:minHeight="30dip"
        android:onClick="cmdBuscarGPS_click"
        android:text="Hallar Coordenadas"
        android:textColor="@string/colorTextoBoton" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbl_latitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@string/colorFondoPantallas"
            android:text="LATITUD..."
            android:textColor="@string/colorTxtEdit" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_lat_grados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GRADOS:"
                android:textColor="@string/colorTxtEdit" />

            <TextView
                android:id="@+id/txt_lat_grados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@string/colorTextoTxtEdit" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_lat_minutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MINUTOS:"
                android:textColor="@string/colorTxtEdit" />

            <TextView
                android:id="@+id/txt_lat_minutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@string/colorTextoTxtEdit" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_lat_segundos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SEGUNDOS:"
                android:textColor="@string/colorTxtEdit" />

            <TextView
                android:id="@+id/txt_lat_segundos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@string/colorTextoTxtEdit" />
        </TableRow>
    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbl_longitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@string/colorFondoPantallas"
            android:text="LONGITUD..."
            android:textColor="@string/colorTxtEdit" />

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_lon_grados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GRADOS:"
                android:textColor="@string/colorTxtEdit" />

            <TextView
                android:id="@+id/txt_lon_grados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@string/colorTextoTxtEdit" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_lon_minutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MINUTOS:"
                android:textColor="@string/colorTxtEdit" />

            <TextView
                android:id="@+id/txt_lon_minutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@string/colorTextoTxtEdit" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_lon_segundos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SEGUNDOS:"
                android:textColor="@string/colorTxtEdit" />

            <TextView
                android:id="@+id/txt_lon_segundos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@string/colorTextoTxtEdit" />
        </TableRow>
    </TableLayout>

     <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp" />
     
     <Button
        android:id="@+id/cmdGuardarInfoGPS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@string/colorFondoBoton"
        android:minHeight="30dip"
        android:onClick="cmdGuardarInfoGPS_click"
        android:text="Guardar"
        android:textColor="@string/colorTextoBoton" />
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/gps" />

</LinearLayout>